--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>CSS Stylesheets with Relative Paths</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <title>Portfolio</title>
+  <link rel="stylesheet" type="text/css" href="assets.css/style.css">
 </head>
 
 <body>
   <header>
-    <h1>Student Bio</h1>
+    <h1>Kaiisha Oliver</h1>
   </header>
 
   <div class="container">
 
     <section id="main-bio">
 
-      <h2>Kaiisha Oliver</h2>
+      <h2>About Me</h2>
 
       <img id="bio-image" src="assets/images/ProfilePic.jpeg" alt="Kaiisha">
 
