background image changed, links added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
   <header>
     <h1>Kaiisha Oliver</h1>
-  </section>>
+   
+     <nav id="naviagte">
+      <a href=index.html>About</a>
+      <a href=portfolio.html>Portfolio</a>
+      <a href=contact.html>Contact</a>
+      </nav>
+   <hr>
   </header>
 
   <div class="container">
@@ -25,7 +31,6 @@
       <p>Upon graduation I began working for Schlesinger Associates, a Market Research facility. Within 4 years I achieved the role of Facility Manager before I made my exit. I went on to work for The Sherwin-Williams Company. After completing their Manager Trainee program I would go on to manage 3 differnt stores over the course of my 5 years. During this time, I received the award for Peek Performer within the NW Atlanta distrcit for 2 consecutive years and earned the Spectrum of Excellence President's Award for 3 consecutive years.</p>
       <p>Summer of 2019 I made the decision to part ways in hopes of finding my passion. Within a week of working my last day with S-W I was accepted into the Georgia Tech Professional Education Program for their 6-month Coding Bootcamp. Now that I am here, I am anxious to see me push my limits and gain new skills as I start my journey into a new career!</p>
     </section>
-
-
+</div>
       </body>
       </html>
