--- a/contact.html
+++ b/contact.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=   
-    
-    <section id="contact-info">
-        <h1>Contact Info</h1>
-        <ul>
-          <li><strong>Email:</strong> <a href="#">kaiisha@yahoo.com</a></li>
-          <li><strong>Github:</strong> <a href="#">sampleName</a></li>
-          <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Contact Me</title>
 </head>
 <body>
-    
+        <section id="contact-info">
+                <h2>Contact Info</h2>
+                <ul>
+                  <li><strong>Email:</strong> <a href="#">kaiisha@yahoo.com</a></li>
+                  <li><strong>Github:</strong> <a href="#">sampleName</a></li>
+                  <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+                </ul>
+              </section>
 </body>
 </html>
