initial text for contact page

--- a/contact.html
+++ b/contact.html
@@ -4,16 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
     <title>Contact Me</title>
 </head>
 <body>
-        <section id="contact-info">
-                <h2>Contact Info</h2>
-                <ul>
-                  <li><strong>Email:</strong> <a href="#">kaiisha@yahoo.com</a></li>
-                  <li><strong>Github:</strong> <a href="#">sampleName</a></li>
-                  <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
-                </ul>
-              </section>
+<header>
+    <h1>Kaiisha Oliver</h1>
+   
+     <nav id="naviagte">
+      <a href=index.html>About</a>
+      <a href=portfolio.html>Portfolio</a>
+      <a href=contact.html>Contact</a>
+      </nav>
+  </header>
+
+<div class="container">
+        <section id="contact">
+<h2>Contact</h2>
+<hr>
+<p>Name</p>
+<p>Email</p>
+<p>Message</p>
+
+        <button>Submit</button>
+        </section>
+  </div>
 </body>
 </html>
