--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
       <p>Summer of 2019 I made the decision to part ways in hopes of finding my passion. Within a week of working my last day with S-W I was accepted into the Georgia Tech Professional Education Program for their 6-month Coding Bootcamp. Now that I am here, I am anxious to see me push my limits and gain new skills as I start my journey into a new career!</p>
     </section>
 </div>
+<footer></footer>
       </body>
       </html>
