--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Portfolio</title>
 </head>
+<header>
+        <h1>Kaiisha Oliver</h1>
+       
+         <nav id="naviagte">
+          <a href=index.html>About</a>
+          <a href=portfolio.html>Portfolio</a>
+          <a href=contact.html>Contact</a>
+          </nav>
+       <hr>
+      </header>
 <body>
     
 </body>
