--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+    <link rel="stylesheet" href="contact.css">
     <title>Contact Me</title>
 </head>
 <body>
@@ -23,10 +23,13 @@
 <h2>Contact</h2>
 <hr>
 <p>Name</p>
+<input type="text" placeholder="John Smith">
 <p>Email</p>
+<input type="text" placeholder="example@gmail.com">
 <p>Message</p>
-
-        <button>Submit</button>
+<input type="text">
+<br>
+<button>Submit</button>
         </section>
   </div>
 </body>
