--- a/contact.html
+++ b/contact.html
@@ -23,11 +23,11 @@
 <h2>Contact</h2>
 <hr>
 <p>Name</p>
-<input type="text" placeholder="John Smith">
+<input type="text" placeholder="John Smith" id="name"> 
 <p>Email</p>
-<input type="text" placeholder="example@gmail.com">
+<input type="text" placeholder="example@gmail.com" id="email">
 <p>Message</p>
-<input type="text">
+<input type="text" id="message"> 
 <br>
 <button>Submit</button>
         </section>
