--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/portfolio.css">
     <title>Portfolio</title>
 </head>
 <header>
@@ -18,6 +18,19 @@
        <hr>
       </header>
 <body>
-    
+    <div class="container">
+<h2>Portfolio</h2>
+<div class="row">
+    <div class="col"><img src="assets/images/Hangman.png" alt="Hangman"></div>
+    <div class="col"><img src="assets/images/RPG Game.jpg" alt="RPG Game"></div>
+</div>
+<div class="row">
+    <div class="col"><img src="assets/images/Trivia.png" alt="Trivia Game"></div>
+    <div class="col"><img src="assets/images/Rutgers Info.jpg" alt="Rugters Info Widget"></div>
+</div>
+<div class="row">
+    <div class="col"><img src="assets/images/Rock-paper-scissors.jpg" alt="Rock Paper Scissors"></div>
+</div>
+    </div>
 </body>
 </html>
