--- a/portfolio.html
+++ b/portfolio.html
@@ -15,22 +15,28 @@
           <a href=portfolio.html>Portfolio</a>
           <a href=contact.html>Contact</a>
           </nav>
-       <hr>
+       
       </header>
 <body>
     <div class="container">
 <h2>Portfolio</h2>
-<div class="row">
-    <div class="col"><img src="assets/images/Hangman.png" alt="Hangman"></div>
-    <div class="col"><img src="assets/images/RPG Game.jpg" alt="RPG Game"></div>
+<hr>
+
+<table>
+    <tr>
+        <td><img src="assets/images/Hangman.png" alt="Hangman"></td>
+        <td><img src="assets/images/RPG Game.jpg" alt="RPG Game"></td>
+    </tr>
+    <tr>
+        <td><img src="assets/images/Trivia.png" alt="Trvia Game"></td>
+        <td><img src="assets/images/Rutgers Info.jpg" alt="Rutgers Info Widget"></td>
+    </tr>
+    <tr>
+        <td><img src="assets/images/Rock-paper-scissors.jpg" alt="RockPaperScissors"></td>
+    </tr>
+</table>
+
+
 </div>
-<div class="row">
-    <div class="col"><img src="assets/images/Trivia.png" alt="Trivia Game"></div>
-    <div class="col"><img src="assets/images/Rutgers Info.jpg" alt="Rugters Info Widget"></div>
-</div>
-<div class="row">
-    <div class="col"><img src="assets/images/Rock-paper-scissors.jpg" alt="Rock Paper Scissors"></div>
-</div>
-    </div>
 </body>
 </html>
