--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,13 @@
 <table>
     <tr>
         <td><img src="assets/images/Hangman.png" alt="Hangman"></td>
+            <div class="Hangman">
+                <p>Hangman</p>
+        </div>
         <td><img src="assets/images/RPG Game.jpg" alt="RPG Game"></td>
+       <div class="RPG">
+                <p>RPG</p>
+        </div>
     </tr>
     <tr>
         <td><img src="assets/images/Trivia.png" alt="Trvia Game"></td>
